--- a/platform/vc++/tui_demo.vcxproj
+++ b/platform/vc++/tui_demo.vcxproj
@@ -124,7 +124,7 @@
     <ClInclude Include="..\..\includes\stdxxx.h" />
     <ClInclude Include="..\..\includes\sys_msg_def.h" />
     <ClInclude Include="..\..\includes\tui.h" />
-    <ClInclude Include="..\..\apps\tui_id.h" />
+    <ClInclude Include="..\..\includes\tui_id.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
