--- a/platform/melis/make.cfg
+++ b/platform/melis/make.cfg
@@ -31,7 +31,7 @@ INCLUDES        =   -I$(ROOT)                       \
                     -I$(SDKROOT)/includes/emod
 
 #库文件列表
-LIBS            =   $(LIBPATH)/elibs.a  $(ROOT)/lib/tui.a
+LIBS            =   $(LIBPATH)/elibs.a  $(ROOT)/lib/libtui.a
 
 #列出该工程下的所有包含源程序的子目录
 SRCDIRS  =  $(shell find ./../.. -maxdepth 6 -type d)
