--- a/platform/melis/make.cfg
+++ b/platform/melis/make.cfg
@@ -54,7 +54,7 @@ ifeq ($(CROSSTOOL), ARMRVDS)
 #程序链接脚本
 LINK_SCT        =   --scatter=$(ROOT)/config/config.sct
 #编译器扩展参数
-CFLAGS     := $(CFLAGS) -O3 --debug -DEPDK_DEBUG_LEVEL=EPDK_DEBUG_LEVEL_LOG_ALL -DAW_MELIS
+CFLAGS     := $(CFLAGS) -O3 --debug -DEPDK_DEBUG_LEVEL=EPDK_DEBUG_LEVEL_LOG_ALL -DAW_MELIS -DAW_MELIS2
 CFLAGS     := $(CFLAGS) $(INCLUDES)
 
 CFLAGS += --gnu
